<resources>
    <string name="app_name">BeginnerAndroidAssignment</string>
    <string name="log_in">Log in</string>
    <string name="start_your_adventure">Start\nyour\nadventure</string>
    <string name="first_time_here_sign_up">First time here? Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">New\nAccount</string>
    <string name="next">Next</string>
    <string name="not_the_first_time_here_log_in">Not the first time here? Log In</string>
    <string name="name_capital">NAME</string>
    <string name="email_capital">EMAIL</string>
    <string name="_1_2_steps">1/2\nsteps</string>
    <string name="name">Name</string>
    <string name="_2_2_steps">2/2\nsteps</string>
    <string name="password_capital">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="allow_comments">Allow comments</string>
    <string name="profile">Profile</string>
    <string name="bio">Bio:</string>
    <string name="lipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="profile_picture">Profile picture</string>
    <string name="_5_m">5 m</string>
    <string name="_140">140</string>
    <string name="_343">343</string>
    <string name="_24">24</string>
    <string name="description">Description</string>
</resources>