<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorLogin">

    <View
        android:id="@+id/arrow_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_arrow"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.07" />

    <TextView
        android:id="@+id/text_vew_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/arrow_back"
        app:layout_constraintTop_toBottomOf="@id/arrow_back"
        app:layout_constraintVertical_bias="0.1" />

    <!--    TODO make 2 bigger-->
    <TextView
        android:id="@+id/text_view_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/_2_2_steps"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_vew_new_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/password_capital"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_password" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/editTextHintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_vew_new_account"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintWidth_percent="0.67"
        android:theme="@style/CustomEditTextStyle"/>

    <TextView
        android:id="@+id/text_view_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm_password"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_text_password_confirm"
        app:layout_constraintStart_toStartOf="@id/edit_text_password_confirm"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

    <EditText
        android:id="@+id/edit_text_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/editTextHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_confirm_password"
        app:layout_constraintWidth_percent="0.67"
        android:theme="@style/CustomEditTextStyle"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password_confirm"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.67"
        android:padding="15dp"
        android:elevation="8dp"
        android:stateListAnimator="@null"/>

    <TextView
        android:id="@+id/text_view_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/not_the_first_time_here_log_in"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>