<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="15dp"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/text_view_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/card_view_container_profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_view_container_profile_picture"
            tools:text="Name Surname" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_container_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sample_profile_picture" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_past_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/_5_m"
            app:layout_constraintBottom_toBottomOf="@id/card_view_container_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_view_container_profile_picture" />

        <ImageView
            android:id="@+id/image_view_post"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHeight_percent="0.63"
            app:layout_constraintTop_toBottomOf="@id/card_view_container_profile_picture" />

        <View
            android:id="@+id/view_heart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/view_share"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_post"
            app:layout_constraintWidth_percent="0.085" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_140"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/view_heart"
            app:layout_constraintStart_toEndOf="@id/view_heart"
            app:layout_constraintTop_toTopOf="@id/view_heart" />

        <View
            android:id="@+id/view_share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/view_message"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_heart"
            app:layout_constraintTop_toBottomOf="@id/image_view_post"
            app:layout_constraintWidth_percent="0.085" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_343"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/view_share"
            app:layout_constraintStart_toEndOf="@id/view_share"
            app:layout_constraintTop_toTopOf="@id/view_share" />

        <View
            android:id="@+id/view_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/text_view_message_count"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_share"
            app:layout_constraintTop_toBottomOf="@id/image_view_post"
            app:layout_constraintWidth_percent="0.085" />

        <TextView
            android:id="@+id/text_view_message_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/_24"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/view_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>